--- a/gpdoc.ipynb
+++ b/gpdoc.ipynb
@@ -15,8 +15,8 @@
       "source": [
         "INSTRUCTIONS:\n",
         "\n",
-        "1. Get a HuggingFace token from huggingface.co. Go to Secrets menu on left sidebar, the one with the key icon. Add a new secret named HF_TOKEN and paste the token value. Grant notebook access to secrets.\n",
-        "2. In left navbar click Files icon. Right click anywhere in the Files section and create a new folder called patient_data.\n",
+        "1. Get a HuggingFace token from huggingface.co. Go to Secrets menu on left sidebar, the one with the key icon. Add a new secret named HF_TOKEN and paste the token value. Grant notebook access to secrets. You only have to do this one time and this token can be used in other notebooks.\n",
+        "2. In left navbar click Files icon. right click anywhere in the Files section and create a new folder called patient_data.\n",
         "3. Add doctor's notes in .txt file format to patient_data folder. Below is an example note. **Don't** use notes with real patient data!  \n",
         "4. Run the code below and enter questions. Sample questions are given below. To end the session, enter \"bye\", \"quit\" or \"exit\".\n",
         "5. If you find issues like missing imports then try restarting session under Runtime menu.\n",
@@ -90,13 +90,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8GOnj-uNwte0",
-        "outputId": "dc648860-ad33-40c5-efe8-f0fea66bc535"
+        "outputId": "98a9e022-ee28-4f00-e7d0-a45937a8f089"
       },
       "outputs": [
         {
@@ -104,8 +104,8 @@
           "name": "stdout",
           "text": [
             "Collecting llama-index\n",
-            "  Downloading llama_index-0.9.38-py3-none-any.whl (15.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.9/15.9 MB\u001b[0m \u001b[31m46.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "  Downloading llama_index-0.9.39-py3-none-any.whl (15.9 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.9/15.9 MB\u001b[0m \u001b[31m54.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: SQLAlchemy[asyncio]>=1.4.49 in /usr/local/lib/python3.10/dist-packages (from llama-index) (2.0.24)\n",
             "Requirement already satisfied: aiohttp<4.0.0,>=3.8.6 in /usr/local/lib/python3.10/dist-packages (from llama-index) (3.9.1)\n",
             "Collecting dataclasses-json (from llama-index)\n",
@@ -115,20 +115,20 @@
             "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.10/dist-packages (from llama-index) (2023.6.0)\n",
             "Collecting httpx (from llama-index)\n",
             "  Downloading httpx-0.26.0-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.9/75.9 kB\u001b[0m \u001b[31m10.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.9/75.9 kB\u001b[0m \u001b[31m10.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: nest-asyncio<2.0.0,>=1.5.8 in /usr/local/lib/python3.10/dist-packages (from llama-index) (1.6.0)\n",
             "Requirement already satisfied: networkx>=3.0 in /usr/local/lib/python3.10/dist-packages (from llama-index) (3.2.1)\n",
             "Requirement already satisfied: nltk<4.0.0,>=3.8.1 in /usr/local/lib/python3.10/dist-packages (from llama-index) (3.8.1)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from llama-index) (1.23.5)\n",
             "Collecting openai>=1.1.0 (from llama-index)\n",
             "  Downloading openai-1.10.0-py3-none-any.whl (225 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m225.1/225.1 kB\u001b[0m \u001b[31m25.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m225.1/225.1 kB\u001b[0m \u001b[31m26.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (from llama-index) (1.5.3)\n",
             "Requirement already satisfied: requests>=2.31.0 in /usr/local/lib/python3.10/dist-packages (from llama-index) (2.31.0)\n",
             "Requirement already satisfied: tenacity<9.0.0,>=8.2.0 in /usr/local/lib/python3.10/dist-packages (from llama-index) (8.2.3)\n",
             "Collecting tiktoken>=0.3.3 (from llama-index)\n",
             "  Downloading tiktoken-0.5.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m68.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m87.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: typing-extensions>=4.5.0 in /usr/local/lib/python3.10/dist-packages (from llama-index) (4.5.0)\n",
             "Collecting typing-inspect>=0.8.0 (from llama-index)\n",
             "  Downloading typing_inspect-0.9.0-py3-none-any.whl (8.8 kB)\n",
@@ -152,11 +152,11 @@
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx->llama-index) (2023.11.17)\n",
             "Collecting httpcore==1.* (from httpx->llama-index)\n",
             "  Downloading httpcore-1.0.2-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.9/76.9 kB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.9/76.9 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from httpx->llama-index) (3.6)\n",
             "Collecting h11<0.15,>=0.13 (from httpcore==1.*->httpx->llama-index)\n",
             "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.31.0->llama-index) (3.3.2)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.31.0->llama-index) (2.0.7)\n",
             "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from SQLAlchemy[asyncio]>=1.4.49->llama-index) (3.0.3)\n",
@@ -164,7 +164,7 @@
             "  Downloading mypy_extensions-1.0.0-py3-none-any.whl (4.7 kB)\n",
             "Collecting marshmallow<4.0.0,>=3.18.0 (from dataclasses-json->llama-index)\n",
             "  Downloading marshmallow-3.20.2-py3-none-any.whl (49 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.4/49.4 kB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.4/49.4 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas->llama-index) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas->llama-index) (2023.3.post1)\n",
             "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai>=1.1.0->llama-index) (1.2.0)\n",
@@ -178,7 +178,7 @@
             "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
             "llmx 0.0.15a0 requires cohere, which is not installed.\n",
             "tensorflow-probability 0.22.0 requires typing-extensions<4.6.0, but you have typing-extensions 4.9.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed dataclasses-json-0.6.3 deprecated-1.2.14 h11-0.14.0 httpcore-1.0.2 httpx-0.26.0 llama-index-0.9.38 marshmallow-3.20.2 mypy-extensions-1.0.0 openai-1.10.0 tiktoken-0.5.2 typing-extensions-4.9.0 typing-inspect-0.9.0\n"
+            "\u001b[0mSuccessfully installed dataclasses-json-0.6.3 deprecated-1.2.14 h11-0.14.0 httpcore-1.0.2 httpx-0.26.0 llama-index-0.9.39 marshmallow-3.20.2 mypy-extensions-1.0.0 openai-1.10.0 tiktoken-0.5.2 typing-extensions-4.9.0 typing-inspect-0.9.0\n"
           ]
         }
       ],
@@ -194,25 +194,29 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "22c8800c-ef5a-4159-a316-c2de2d2172ae"
+        "outputId": "3f8c4b76-1eff-4c74-ea1a-c4c9a7ada3f2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter one of these keywords to exit:  (':q', 'quit', 'exit', 'bye')\n",
-            "> What are the current dosages and frequencies of the medications prescribed?\n",
-            "GPDoc: 1. Flovent 110 mcg/inh aerosol with adapter Glaxo Wellcome - unspecified dosage and frequency\n",
-            "2. Singulair 5mg tablet chewable Merck & Co. Inc - unspecified dosage and frequency\n",
-            "3. Albuterol Sulfate 4mg tablet ESI Lederle Generics - unspecified dosage and frequency\n",
-            "4. Sulfamethoxazole-Trimethoprim 80mg-16 mg/ml solution ESI Lederle Generics - unspecified dosage and frequency\n",
-            "5. Penicillin V Potassium V potassium 500mg tablet UDL Laboratories Inc - unspecified dosage and frequency\n",
+            "Please start entering your questions below. To quit, enter one of these keywords:  (':q', 'quit', 'exit', 'bye')\n",
             "\n",
-            "Note: The medication information provided in the given context is incomplete and does not specify the dosages and frequencies.\n",
+            "> Can you tell me about the patent's symptoms?\n",
+            "GPDoc: The patient has been experiencing nausea, vomiting, and diarrhea for one day. She has been unable to keep up with her fluid losses due to these symptoms. At an outside institution, she was found to be very dehydrated and received IV fluids. She has been admitted to the ER in stable condition for further management of her dehydration.\n",
             "\n",
-            "> what is the reason for sulfamethoxazole\n",
-            "GPDoc: The reason for sulfamethoxazole is not explicitly stated in the given context information. However, based on the medication list, sulfamethoxazole-trimethoprim 80mg-16 mg/ml solution ESI Lederle Generics is prescribed to the patient. It is possible that sulfamethoxazole is being used to treat an infection or prevent one, but without further information, it is unclear.\n",
+            "> tell me more about the nausea\n",
+            "GPDoc: According to the patient's history of present illness, she has been experiencing nausea, vomiting, and diarrhea for one day. The nausea is not described in detail, but it is mentioned that it has been present along with vomiting and diarrhea. The patient's nausea may be related to the gastroenteritis that she has been experiencing.\n",
+            "\n",
+            "> How about the vomiting and diarrhea?\n",
+            "GPDoc: The patient has been experiencing nausea, vomiting, and diarrhea for one day. It sounds like a gastroenteritis, and she has been unable to keep up with her fluid losses. At an outside institution, she was found to be very dehydrated and received IV fluids. The patient left the ER after IV treatment and antibiotics for further management of her dehydration.\n",
+            "\n",
+            "> tell me about the patient\n",
+            "GPDoc: The patient is a 26-year-old female with asthma status, now on Flowvent and Acyclovir, and multiple other medications who has been having nausea, vomiting, and diarrhea for one day. She has been unable to keep up with her fluid losses and was found to be very dehydrated at an outside institution. She received IV fluids and was transferred here. Her heart rate was down into 114 and her blood pressure was normal. She left the ER after IV treatment and antibiotics without incident for further management of her dehydration.\n",
+            "\n",
+            "> What is the rationale for the Flowvent?\n",
+            "GPDoc: The patient has asthma status and is currently on Flowvent and Acyclovir, as well as multiple other medications. The rationale for the Flowvent is likely to manage the patient's asthma symptoms.\n",
             "\n",
             "> bye\n",
             "GPDoc: Good bye\n"
@@ -241,7 +245,9 @@
         "query_engine = index.as_query_engine()\n",
         "gpdoc = \"GPDoc:\"\n",
         "exit_conditions = (\":q\", \"quit\", \"exit\", \"bye\")\n",
-        "print(\"Enter one of these keywords to exit: \", exit_conditions)\n",
+        "print(\"Please start entering your questions below. To quit, enter one of these keywords: \", exit_conditions)\n",
+        "print()\n",
+        "\n",
         "while True:\n",
         "  query = input(\"> \")\n",
         "  if query in exit_conditions:\n",
